Setting up Tailwind 4 with vite so I can use intellisense, moving CSS into own file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <link rel="stylesheet" href="/app.css">
 </head>
 <body>
-  <h1>Hello 🙂</h1>
+  <h1 class="text-brand-primary-700 bg-brand-primary-100">Hello 🙂</h1>
   <load src="partials/test.html" />
 </body>
 </html>
