Laying out brand colours

--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
 <body>
   <h1 class="text-brand-primary-700 bg-brand-primary-100">Hello 🙂</h1>
   <load src="partials/test.html" />
+
+  <div class="card-container bg-brand-light">
+    Test
+  </div>
+  <div class="card-container bg-brand-light">
+    Test
+  </div>
+  <div class="card-container bg-brand-light">
+    Test
+  </div>
 </body>
 </html>
