Setting up basic navigation partial

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="container mx-auto">
-    <load src="partials/test.html" />
+    <load src="partials/navigation.html" />
 
     <div class="card-container bg-brand-light p-4">
       Test
