Installing Adobe Fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
+  <!-- Adobe Fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/hnw4byi.css">
+
   <!-- Swiper -->
   <link
     rel="stylesheet"
@@ -20,8 +23,16 @@
   <div class="container mx-auto">
     <load src="partials/navigation.html" />
 
-    <div class="card-container bg-brand-light p-4">
-      Test
+    <div class="card-container bg-brand-light p-4 flex flex-col items-start gap-3">
+      <div class="badge-primary">Welcome to Wigmore Medical</div>
+      <div class="bg-brand-dark min-w-md p-4">
+        <div class="badge-transparent">
+          Test
+        </div>
+      </div>
+      <h1 class="heading-primary text-4xl">Our Latest Offers</h1>
+      <h1 class="heading-secondary text-base">How Excessive Product Layering Can Sabotage Your Skin</h1>
+      <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
     </div>
 
     <load src="partials/loading-state.html" />
