Building carousel logo and hero carousel

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   <div class="container mx-auto">
     <load src="partials/navigation.html" />
 
+    <load src="partials/home/hero.html" />
+
+    <load src="partials/home/logo-carousel.html" />
+
     <div class="card-container bg-brand-light p-4 flex flex-col items-start gap-3">
       <div class="badge-primary">Welcome to Wigmore Medical</div>
       <div class="bg-brand-dark min-w-md p-4">
