--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
       <h1 class="heading-primary text-4xl">Our Latest Offers</h1>
       <h1 class="heading-secondary text-base">How Excessive Product Layering Can Sabotage Your Skin</h1>
       <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
+
+      <div class="flex flex-row gap-4 mt-2">
+        <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
+          Join Now
+        </a>
+        <a href="#" class="pr-2 pl-6 py-2 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
+          Join Now
+          <span class="w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-primary-700">
+            <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+          </span>
+        </a>
+        <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+          Sign in
+        </a>
+      </div>
     </div>
 
     <load src="partials/loading-state.html" />
