Creating image/text home section, fixing logo, updating base font

--- a/index.html
+++ b/index.html
@@ -27,6 +27,32 @@
 
     <load src="partials/home/logo-carousel.html" />
 
+    <div class="card-container bg-brand-light p-16">
+      <div class="flex flex-row gap justify-between gap-6">
+        <div class="w-1/2 flex flex-col gap-4 items-start justify-center">
+          <div class="badge-primary">Welcome to Wigmore Medical</div>
+          <h1 class="heading-primary text-4xl">
+            A Secure Platform for Medical and Aesthetic Professionals
+          </h1>
+          <p>Wigmore Medical is the UK’s longest-established aesthetics distribution company, with over 30 years of experience supplying prescription medicines, devices, and skincare to medical and aesthetic professionals.</p>
+          <p>This platform is designed exclusively for registered professionals to securely order products, manage prescriptions, add prescribers and patients, and access tailored pricing and offers through the Wigmore Portal.</p>
+          <p>If you are looking to book a pharmacy appointment or access public services, please visit our Wigmore Pharmacy website.</p>
+
+          <div class="flex flex-row gap-3 mt-2">
+            <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
+              Create a Professional Account
+            </a>
+            <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+              Visit Wigmore Pharmacy
+            </a>
+          </div>
+        </div>
+        <div class="w-1/2">
+          <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-9/10 object-cover rounded-3xl">
+        </div>
+      </div>
+    </div>
+
     <div class="card-container bg-brand-light p-4 flex flex-col items-start gap-3">
       <div class="badge-primary">Welcome to Wigmore Medical</div>
       <div class="bg-brand-dark min-w-md p-4">
