--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 
     <load src="partials/home/logo-carousel.html" />
 
+    <!-- SECTION: image text CTAs -->
     <div class="card-container bg-brand-light p-16">
-      <div class="flex flex-row gap justify-between gap-6">
+      <div class="flex flex-row justify-between gap-6">
         <div class="w-1/2 flex flex-col gap-4 items-start justify-center">
           <div class="badge-primary">Welcome to Wigmore Medical</div>
           <h1 class="heading-primary text-4xl">
@@ -42,13 +43,46 @@
             <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
               Create a Professional Account
             </a>
-            <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+            <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
               Visit Wigmore Pharmacy
             </a>
           </div>
         </div>
         <div class="w-1/2">
           <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-9/10 object-cover rounded-3xl">
+        </div>
+      </div>
+    </div>
+
+    <!-- SECTION: product card carousels -->
+    <div class="card-container bg-brand-light p-16">
+      <div class="flex flex-col items-center justify-between gap-6">
+        <div class="w-1/2 flex flex-col gap-4 items-center text-center justify-center">
+          <div class="badge-primary">Current Promotions</div>
+          <h1 class="heading-primary text-4xl">Our Latest Offers</h1>
+          <p>Discover exclusive deals on prescription medicines, devices, and skincare, available only to verified Wigmore Medical account holders.</p>
+
+          <div class="flex flex-row gap-3 mt-2">
+            <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+              View all offers
+            </a>
+          </div>
+        </div>
+        <!-- Carousel -->
+        <div class="w-full">
+          <div class="w-1/3">
+            <div class="rounded-xl overflow-hidden mb-2">
+              <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-4/3 object-cover">
+            </div>
+            <div class="flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
+              <div class="badge-primary">Image Skincare</div>
+              <h1 class="heading-secondary text-base">Special Offer - Buy 10 and Get 6 Free!</h1>
+              <p class="text-sm">Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
+              <a href="#" class="px-6 py-2.5 mt-1 w-full flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
+                View Offer
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -70,7 +104,7 @@
         </a>
         <a href="#" class="pr-2 pl-6 py-2 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
           Join Now
-          <span class="w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-primary-700">
+          <span class="w-7 h-7 flex items-center justify-center bg-white rounded-full text-brand-primary-700">
             <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
           </span>
         </a>
