--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
     </div>
 
     <!-- SECTION: product card carousels -->
+    <load src="partials/home/offer-carousel.html" />
+
+    <!-- SECTION: collections -->
     <div class="card-container bg-brand-light p-16">
       <div class="flex flex-col items-center justify-between gap-6">
-        <div class="w-1/2 flex flex-col gap-4 items-center text-center justify-center">
+        <div class="w-1/2 flex flex-col gap-4 items-center text-center justify-center mb-4">
           <div class="badge-primary">Current Promotions</div>
           <h1 class="heading-primary text-4xl">Our Latest Offers</h1>
           <p>Discover exclusive deals on prescription medicines, devices, and skincare, available only to verified Wigmore Medical account holders.</p>
@@ -68,21 +71,58 @@
             </a>
           </div>
         </div>
-        <!-- Carousel -->
-        <div class="w-full">
-          <div class="w-1/3">
-            <div class="rounded-xl overflow-hidden mb-2">
-              <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-4/3 object-cover">
+        <!-- collections -->
+        <div
+          x-data
+          x-init="new Swiper($refs.swiper, {
+            slidesPerView: 5,
+            spaceBetween: 18,
+            pagination: {
+              el: $refs.progressbar,
+              type: 'progressbar',
+            },
+            navigation: {
+              nextEl: $refs.next,
+              prevEl: $refs.prev,
+            },
+          })"
+          class="w-full relative"
+        >
+          <div class="flex items-center gap-4">
+            <!-- Prev Arrow -->
+            <button x-ref="prev" class="absolute -left-10 w-7 h-7 flex items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
+              <span class="icon icon-arrow w-3 h-3"></span>
+            </button>
+
+            <!-- Swiper Container -->
+            <div x-ref="swiper" class="swiper flex-1 overflow-hidden">
+              <div class="swiper-wrapper">
+                <!-- Card 1 -->
+                <div class="swiper-slide">
+                  <a href="#" class="group block">
+                    <div class="rounded-xl overflow-hidden mb-2">
+                      <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-square object-cover transition-transform duration-300 group-hover:scale-105">
+                    </div>
+                    <div class="flex flex-row justify-between items-center gap-3 p-5 border border-brand-border-light rounded-xl bg-white transition-colors group-hover:border-brand-primary-700">
+                      <div class="text-brand-dark uppercase text-xs font-medium tracking-widest">
+                        Skincare
+                      </div>
+                      <div class="icon icon-arrow block text-brand-dark w-3 h-3 rotate-180 transition-transform duration-300 group-hover:translate-x-1"></div>
+                    </div>
+                  </a>
+                </div>
+
+              </div>
             </div>
-            <div class="flex flex-col items-start gap-3 p-5 border border-brand-border-light rounded-xl bg-white">
-              <div class="badge-primary">Image Skincare</div>
-              <h1 class="heading-secondary text-base">Special Offer - Buy 10 and Get 6 Free!</h1>
-              <p class="text-sm">Buy 10 and get 6 free. Mix and match and get the cheapest free of charge!</p>
-              <a href="#" class="px-6 py-2.5 mt-1 w-full flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
-                View Offer
-              </a>
-            </div>
+
+            <!-- Next Arrow -->
+            <button x-ref="next" class="absolute -right-10 w-7 h-7 flex items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
+              <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+            </button>
           </div>
+
+          <!-- Progress Bar -->
+          <div x-ref="progressbar" class="swiper-pagination product-carousel-progress mt-8 h-1 bg-brand-border rounded-full overflow-hidden"></div>
         </div>
       </div>
     </div>
