--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
               <div class="swiper-wrapper">
                 <!-- Card 1 -->
                 <div class="swiper-slide">
-                  <a href="#" class="group block">
+                  <a href="#" class="group group/arrow block">
                     <div class="rounded-xl overflow-hidden mb-2">
                       <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-square object-cover transition-transform duration-300 group-hover:scale-105">
                     </div>
                     <div class="flex flex-row justify-between items-center gap-3 p-5 border border-brand-border-light rounded-xl bg-white transition-colors group-hover:border-brand-primary-700">
-                      <div class="text-brand-dark uppercase text-xs font-medium tracking-widest">
+                      <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-medium tracking-widest">
                         Skincare
                       </div>
-                      <div class="icon icon-arrow block text-brand-dark w-3 h-3 rotate-180 transition-transform duration-300 group-hover:translate-x-1"></div>
+                      <span class="icon icon-arrow block text-brand-dark group-hover:text-brand-primary-700 w-3 h-3 rotate-180"></span>
                     </div>
                   </a>
                 </div>
