--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
-  <div class="container mx-auto">
+  <div class="body-container">
     <load src="partials/navigation.html" />
 
     <load src="partials/home/hero.html" />
@@ -28,104 +28,166 @@
     <load src="partials/home/logo-carousel.html" />
 
     <!-- SECTION: image text CTAs -->
-    <div class="card-container bg-brand-light p-16">
-      <div class="flex flex-row justify-between gap-6">
-        <div class="w-1/2 flex flex-col gap-4 items-start justify-center">
-          <div class="badge-primary">Welcome to Wigmore Medical</div>
-          <h1 class="heading-primary text-4xl">
-            A Secure Platform for Medical and Aesthetic Professionals
-          </h1>
-          <p>Wigmore Medical is the UK’s longest-established aesthetics distribution company, with over 30 years of experience supplying prescription medicines, devices, and skincare to medical and aesthetic professionals.</p>
-          <p>This platform is designed exclusively for registered professionals to securely order products, manage prescriptions, add prescribers and patients, and access tailored pricing and offers through the Wigmore Portal.</p>
-          <p>If you are looking to book a pharmacy appointment or access public services, please visit our Wigmore Pharmacy website.</p>
+    <div class="card-container bg-brand-light">
+      <div class="card-container-inner">
+        <div class="flex flex-row justify-between gap-6">
+          <div class="w-1/2 flex flex-col gap-4 items-start justify-center md:pr-12">
+            <div class="badge-primary">Welcome to Wigmore Medical</div>
+            <h1 class="heading-primary text-4xl">
+              A Secure Platform for Medical and Aesthetic Professionals
+            </h1>
+            <p>Wigmore Medical is the UK’s longest-established aesthetics distribution company, with over 30 years of experience supplying prescription medicines, devices, and skincare to medical and aesthetic professionals.</p>
+            <p>This platform is designed exclusively for registered professionals to securely order products, manage prescriptions, add prescribers and patients, and access tailored pricing and offers through the Wigmore Portal.</p>
+            <p>If you are looking to book a pharmacy appointment or access public services, please visit our Wigmore Pharmacy website.</p>
 
-          <div class="flex flex-row gap-3 mt-2">
-            <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
-              Create a Professional Account
-            </a>
-            <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
-              Visit Wigmore Pharmacy
-            </a>
+            <div class="flex flex-row gap-3 mt-4">
+              <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
+                Create a Professional Account
+              </a>
+              <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+                Visit Wigmore Pharmacy
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="w-1/2">
-          <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-9/10 object-cover rounded-3xl">
+          <div class="w-1/2">
+            <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-9/10 object-cover rounded-3xl">
+          </div>
         </div>
       </div>
     </div>
 
-    <!-- SECTION: product card carousels -->
+    <!-- SECTION: offer carousels -->
     <load src="partials/home/offer-carousel.html" />
 
     <!-- SECTION: collections -->
-    <div class="card-container bg-brand-light p-16">
-      <div class="flex flex-col items-center justify-between gap-6">
-        <div class="w-1/2 flex flex-col gap-4 items-center text-center justify-center mb-4">
-          <div class="badge-primary">Current Promotions</div>
-          <h1 class="heading-primary text-4xl">Our Latest Offers</h1>
-          <p>Discover exclusive deals on prescription medicines, devices, and skincare, available only to verified Wigmore Medical account holders.</p>
+    <load src="partials/home/collections.html" />
 
-          <div class="flex flex-row gap-3 mt-2">
-            <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
-              View all offers
-            </a>
+    <!-- SECTION: product carousel -->
+    <load src="partials/home/product-carousel.html" />
+
+    <!-- SECTION: training cards -->
+    <div
+      x-data="{ cards: 4 }"
+      x-init="$nextTick(() => {
+        new Swiper($refs.swiper, {
+          slidesPerView: 2,
+          spaceBetween: 24,
+          navigation: {
+            nextEl: $refs.next,
+            prevEl: $refs.prev,
+          },
+        })
+      })"
+      class="card-container bg-brand-light"
+    >
+      <div class="card-container-inner">
+        <div class="flex flex-col items-start justify-between gap-6">
+          <div class="w-1/2 flex flex-col gap-4 items-start mb-4">
+            <div class="badge-primary">Professional Aesthetic Education</div>
+            <h1 class="heading-primary text-4xl">Training & Webinars</h1>
+            <p>Join industry-leading educators for in-depth training and live webinars focused on safe practice, and the evolving landscape of medical aesthetics</p>
           </div>
         </div>
-        <!-- collections -->
-        <div
-          x-data
-          x-init="new Swiper($refs.swiper, {
-            slidesPerView: 5,
-            spaceBetween: 18,
-            pagination: {
-              el: $refs.progressbar,
-              type: 'progressbar',
-            },
-            navigation: {
-              nextEl: $refs.next,
-              prevEl: $refs.prev,
-            },
-          })"
-          class="w-full relative"
-        >
+
+        <!-- Carousel -->
+        <div class="w-full relative mt-6">
           <div class="flex items-center gap-4">
             <!-- Prev Arrow -->
-            <button x-ref="prev" class="absolute -left-10 w-7 h-7 flex items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
+            <button x-ref="prev" class="absolute disabled:hidden xl:flex hidden -left-10 w-7 h-7 items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
               <span class="icon icon-arrow w-3 h-3"></span>
             </button>
 
             <!-- Swiper Container -->
             <div x-ref="swiper" class="swiper flex-1 overflow-hidden">
               <div class="swiper-wrapper">
-                <!-- Card 1 -->
-                <div class="swiper-slide">
-                  <a href="#" class="group group/arrow block">
-                    <div class="rounded-xl overflow-hidden mb-2">
-                      <img src="/assets/placeholder-jennie.png" alt="" class="w-full aspect-square object-cover transition-transform duration-300 group-hover:scale-105">
-                    </div>
-                    <div class="flex flex-row justify-between items-center gap-3 p-5 border border-brand-border-light rounded-xl bg-white transition-colors group-hover:border-brand-primary-700">
-                      <div class="text-brand-dark group-hover:text-brand-primary-700 uppercase text-xs font-medium tracking-widest">
-                        Skincare
+                <template x-for="(item, index) in cards" :key="index">
+                  <!-- Card -->
+                  <div class="swiper-slide">
+                    <div
+                      class="relative aspect-5/4 rounded-2xl overflow-hidden bg-cover bg-center"
+                      style="background-image: url('/assets/placeholder-jennie.png');"
+                    >
+                      <div class="absolute inset-0 bg-linear-to-t from-black/90 via-black/20 to-transparent"></div>
+                      <div class="absolute inset-0 p-8 flex flex-col justify-end">
+                        <div class="flex items-end justify-between gap-6">
+                          <div class="flex flex-col gap-2 max-w-80">
+                            <h2 class="heading-primary text-3xl text-brand-light">Training Courses</h2>
+                            <p class="text-brand-light text-sm max-w-md">Editorial content and industry reporting from the world of medical aesthetics</p>
+                          </div>
+                          <div class="shrink-0">
+                            <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-primary-700 rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+                              Join Now
+                              <span class="w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light">
+                                <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+                              </span>
+                            </a>
+                          </div>
+                        </div>
                       </div>
-                      <span class="icon icon-arrow block text-brand-dark group-hover:text-brand-primary-700 w-3 h-3 rotate-180"></span>
                     </div>
-                  </a>
-                </div>
-
+                  </div>
+                </template>
               </div>
             </div>
 
             <!-- Next Arrow -->
-            <button x-ref="next" class="absolute -right-10 w-7 h-7 flex items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
+            <button x-ref="next" class="absolute disabled:hidden xl:flex hidden -right-10 w-7 h-7 items-center justify-center border border-brand-primary-700 bg-white hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
               <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
             </button>
           </div>
-
-          <!-- Progress Bar -->
-          <div x-ref="progressbar" class="swiper-pagination product-carousel-progress mt-8 h-1 bg-brand-border rounded-full overflow-hidden"></div>
         </div>
       </div>
     </div>
+
+
+    <!-- SECTION: image block -->
+    <div
+      class="card-container bg-brand-light"
+    >
+      <div class="card-container-inner">
+        <div class="flex flex-col items-center justify-between gap-6">
+          <div class="w-1/2 flex flex-col gap-4 items-center text-center mb-4">
+            <div class="badge-primary">Award Winning service</div>
+            <h1 class="heading-primary text-4xl">Award Winning Distributors</h1>
+            <p>We’re proud to announce that we won the Safety in Beauty Diamond Award of 2025 for the best aesthetic distributor.</p>
+          </div>
+        </div>
+
+        <div class="w-full relative mt-6">
+          <div class="flex items-center gap-4">
+            <div class="flex-1 overflow-hidden">
+              <div
+                class="relative aspect-10/4 rounded-2xl overflow-hidden bg-cover bg-center"
+                style="background-image: url('/assets/placeholder-jennie.png');"
+              >
+                <div class="absolute inset-0 bg-linear-to-t from-black/90 via-black/20 to-transparent"></div>
+                <div class="absolute inset-0 p-8 flex flex-col justify-end">
+                  <div class="flex items-end justify-between gap-6">
+                    <div class="flex flex-col gap-2 max-w-80">
+                      <h2 class="heading-primary text-3xl text-brand-light">Training Courses</h2>
+                      <p class="text-brand-light text-sm max-w-md">Editorial content and industry reporting from the world of medical aesthetics</p>
+                    </div>
+                    <div class="shrink-0">
+                      <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-primary-700 rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+                        Join Now
+                        <span class="w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light">
+                          <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
 
     <div class="card-container bg-brand-light p-4 flex flex-col items-start gap-3">
       <div class="badge-primary">Welcome to Wigmore Medical</div>
@@ -145,7 +207,7 @@
         <a href="#" class="pr-2 pl-6 py-2 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
           Join Now
           <span class="w-7 h-7 flex items-center justify-center bg-white rounded-full text-brand-primary-700">
-            <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
+            <span class="icon-arrow w-3 h-3 rotate-180"></span>
           </span>
         </a>
         <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
