--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
   />
   <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
-  <!-- Alpine -->
+  <!-- Alpine + Plugins -->
+  <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <!-- Tailwind CSS -->
   <link rel="stylesheet" href="/app.css">
@@ -115,7 +116,7 @@
                             <p class="text-brand-light text-sm max-w-md">Editorial content and industry reporting from the world of medical aesthetics</p>
                           </div>
                           <div class="shrink-0">
-                            <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-primary-700 rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+                            <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-brand-primary-700 rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
                               Join Now
                               <span class="w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light">
                                 <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
@@ -163,12 +164,11 @@
                 <div class="absolute inset-0 bg-linear-to-t from-black/90 via-black/20 to-transparent"></div>
                 <div class="absolute inset-0 p-8 flex flex-col justify-end">
                   <div class="flex items-end justify-between gap-6">
-                    <div class="flex flex-col gap-2 max-w-80">
-                      <h2 class="heading-primary text-3xl text-brand-light">Training Courses</h2>
-                      <p class="text-brand-light text-sm max-w-md">Editorial content and industry reporting from the world of medical aesthetics</p>
+                    <div class="flex flex-col gap-2 max-w-120">
+                      <p class="text-brand-light text-sm">We’re proud to announce that we won the Safety in Beauty Diamond Award of 2025 for the best aesthetic distributor. Thank you so much for your continued support!</p>
                     </div>
                     <div class="shrink-0">
-                      <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-primary-700 rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+                      <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-brand-primary-700 rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
                         Join Now
                         <span class="w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light">
                           <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
@@ -185,8 +185,14 @@
     </div>
 
 
+    <!-- SECTION: blog carousel -->
+    <load src="partials/home/blog-carousel.html" />
 
+    <!-- SECTION: FAQ section -->
+    <load src="partials/home/faq-section.html" />
 
+    <!-- SECTION: footer -->
+    <load src="partials/home/footer.html" />
 
 
     <div class="card-container bg-brand-light p-4 flex flex-col items-start gap-3">
