--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <p>If you are looking to book a pharmacy appointment or access public services, please visit our Wigmore Pharmacy website.</p>
 
             <div class="flex flex-row gap-3 mt-4">
-              <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
+              <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors">
                 Create a Professional Account
               </a>
-              <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+              <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
                 Visit Wigmore Pharmacy
               </a>
             </div>
@@ -83,7 +83,7 @@
     >
       <div class="card-container-inner">
         <div class="flex flex-col items-start justify-between gap-6">
-          <div class="w-1/2 flex flex-col gap-4 items-start mb-4">
+          <div class="max-w-xl flex flex-col gap-4 items-start mb-4">
             <div class="badge-primary">Professional Aesthetic Education</div>
             <h1 class="heading-primary text-4xl">Training & Webinars</h1>
             <p>Join industry-leading educators for in-depth training and live webinars focused on safe practice, and the evolving landscape of medical aesthetics</p>
@@ -113,10 +113,10 @@
                         <div class="flex items-end justify-between gap-6">
                           <div class="flex flex-col gap-2 max-w-80">
                             <h2 class="heading-primary text-3xl text-brand-light">Training Courses</h2>
-                            <p class="text-brand-light text-sm max-w-md">Editorial content and industry reporting from the world of medical aesthetics</p>
+                            <p class="text-brand-light max-w-md">Editorial content and industry reporting from the world of medical aesthetics</p>
                           </div>
                           <div class="shrink-0">
-                            <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-brand-primary-700 rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+                            <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
                               Join Now
                               <span class="w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light">
                                 <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
@@ -147,7 +147,7 @@
     >
       <div class="card-container-inner">
         <div class="flex flex-col items-center justify-between gap-6">
-          <div class="w-1/2 flex flex-col gap-4 items-center text-center mb-4">
+          <div class="max-w-lg flex flex-col gap-4 items-center text-center mb-4">
             <div class="badge-primary">Award Winning service</div>
             <h1 class="heading-primary text-4xl">Award Winning Distributors</h1>
             <p>We’re proud to announce that we won the Safety in Beauty Diamond Award of 2025 for the best aesthetic distributor.</p>
@@ -165,10 +165,10 @@
                 <div class="absolute inset-0 p-8 flex flex-col justify-end">
                   <div class="flex items-end justify-between gap-6">
                     <div class="flex flex-col gap-2 max-w-120">
-                      <p class="text-brand-light text-sm">We’re proud to announce that we won the Safety in Beauty Diamond Award of 2025 for the best aesthetic distributor. Thank you so much for your continued support!</p>
+                      <p class="text-brand-light">We’re proud to announce that we won the Safety in Beauty Diamond Award of 2025 for the best aesthetic distributor. Thank you so much for your continued support!</p>
                     </div>
                     <div class="shrink-0">
-                      <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-brand-primary-700 rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
+                      <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
                         Join Now
                         <span class="w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light">
                           <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
@@ -193,38 +193,6 @@
 
     <!-- SECTION: footer -->
     <load src="partials/home/footer.html" />
-
-
-    <div class="card-container bg-brand-light p-4 flex flex-col items-start gap-3">
-      <div class="badge-primary">Welcome to Wigmore Medical</div>
-      <div class="bg-brand-dark min-w-md p-4">
-        <div class="badge-transparent">
-          Test
-        </div>
-      </div>
-      <h1 class="heading-primary text-4xl">Our Latest Offers</h1>
-      <h1 class="heading-secondary text-base">How Excessive Product Layering Can Sabotage Your Skin</h1>
-      <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
-
-      <div class="flex flex-row gap-4 mt-2">
-        <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
-          Join Now
-        </a>
-        <a href="#" class="pr-2 pl-6 py-2 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-medium hover:bg-brand-primary-800 transition-colors">
-          Join Now
-          <span class="w-7 h-7 flex items-center justify-center bg-white rounded-full text-brand-primary-700">
-            <span class="icon-arrow w-3 h-3 rotate-180"></span>
-          </span>
-        </a>
-        <a href="#" class="px-6 py-3 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-dark rounded-full font-medium hover:bg-brand-primary-100 transition-colors">
-          Sign in
-        </a>
-      </div>
-    </div>
-
-    <load src="partials/loading-state.html" />
-
-    <load src="partials/carousel.html" />
   </div>
 </body>
 </html>
