--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                           </div>
                           <div class="shrink-0">
                             <a href="#" class="pr-2 pl-6 py-1.5 flex items-center justify-center gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors">
-                              Join Now
+                              Read More
                               <span class="w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light">
                                 <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
                               </span>
