Adding prose settings, adding border to card containers

--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
             <h1 class="heading-primary text-4xl">
               A Secure Platform for Medical and Aesthetic Professionals
             </h1>
-            <p>Wigmore Medical is the UK’s longest-established aesthetics distribution company, with over 30 years of experience supplying prescription medicines, devices, and skincare to medical and aesthetic professionals.</p>
-            <p>This platform is designed exclusively for registered professionals to securely order products, manage prescriptions, add prescribers and patients, and access tailored pricing and offers through the Wigmore Portal.</p>
-            <p>If you are looking to book a pharmacy appointment or access public services, please visit our Wigmore Pharmacy website.</p>
+            <div class="prose">
+              <p>Wigmore Medical is the UK’s longest-established aesthetics distribution company, with over 30 years of experience supplying prescription medicines, devices, and skincare to medical and aesthetic professionals.</p>
+              <p>This platform is designed exclusively for registered professionals to securely order products, manage prescriptions, add prescribers and patients, and access tailored pricing and offers through the Wigmore Portal.</p>
+              <p>If you are looking to book a pharmacy appointment or access public services, please visit our Wigmore Pharmacy website.</p>
+            </div>
 
-            <div class="flex flex-row gap-3 mt-4">
+            <div class="flex flex-row gap-3">
               <a href="#" class="button-primary">
                 Create a Professional Account
               </a>
