Building out components section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
     <load src="partials/home/hero.html" />
 
+    <!-- FIXME: temp component section -->
+    <!-- <load src="partials/home/COMPONENTS.html" /> -->
+    <!-- FIXME: /end temp component section -->
+
     <load src="partials/home/logo-carousel.html" />
 
     <!-- SECTION: image text CTAs -->
