--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
+  <!-- Announcement bar -->
+  <div class="md:px-4 md:mt-2" x-data="{
+    announcements: [
+      { text: 'Free Next-Working-Day Delivery – Available once daily before 1pm on orders over £125*', link: { url: '#delivery', label: 'Learn more' } },
+      { text: 'New: Exclusive member discounts now available', link: { url: '#discounts', label: 'View offers' } }
+    ]
+  }">
+    <a :href="announcements[0].link.url" class="block bg-brand-primary-700 md:py-2 py-1.5 text-brand-light font-medium md:rounded-3xl overflow-hidden">
+      <div class="inline-flex w-max announcement-scroll">
+        <template x-for="i in 2" :key="i">
+          <span class="inline-flex items-center shrink-0">
+            <template x-for="(item, index) in announcements" :key="index">
+              <span class="md:text-xs text-xxs whitespace-nowrap inline-flex items-center">
+                <span x-text="item.text" class="hover:underline"></span>
+                <span class="mx-8 w-1 h-1 rounded-full bg-current"></span>
+              </span>
+            </template>
+          </span>
+        </template>
+      </div>
+    </a>
+  </div>
+
   <div class="body-container">
     <load src="partials/navigation.html" />
 
