Building mobile search drawer, adding shared state to both

--- a/products.html
+++ b/products.html
@@ -118,10 +118,10 @@
                 </div>
 
                 <!-- Navigation Arrows -->
-                <button x-ref="prevBtn" class="absolute top-1/2 -translate-y-1/2 z-10 flex left-5 w-7 h-7 items-center justify-center border border-brand-primary-700 bg-white/80 hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
+                <button x-ref="prevBtn" class="absolute top-1/2 -translate-y-1/2 z-10 disabled:hidden flex md:left-5 left-3 w-7 h-7 items-center justify-center border border-brand-primary-700 bg-white/80 hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
                   <span class="icon icon-arrow w-3 h-3"></span>
                 </button>
-                <button x-ref="nextBtn" class="absolute top-1/2 -translate-y-1/2 z-10 flex right-5 w-7 h-7 items-center justify-center border border-brand-primary-700 bg-white/80 hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
+                <button x-ref="nextBtn" class="absolute top-1/2 -translate-y-1/2 z-10 disabled:hidden flex md:right-5 right-3 w-7 h-7 items-center justify-center border border-brand-primary-700 bg-white/80 hover:bg-brand-primary-100 rounded-full text-brand-primary-700 transition-colors cursor-pointer">
                   <span class="icon icon-arrow w-3 h-3 rotate-180"></span>
                 </button>
               </div>
